--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/labnuven.png" />
+    <link rel="icon" type="image/png+xml" href="/labnuven.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plataforma NUVEN + Ingryd</title>
   </head>
